# solana-bootcamp-2026-cn

./: LICENSE  README.md
10-stableswap-on-solana/: .gitignore  Anchor.toml  README.md  how_to_create_stableswap.md  jest.config.js  package.json  tsconfig.json
10-stableswap-on-solana/migrations/: deploy.ts
10-stableswap-on-solana/programs/stableswap/: Cargo.toml
10-stableswap-on-solana/programs/stableswap/src/: constants.rs  errors.rs  lib.rs  math.rs  state.rs
10-stableswap-on-solana/programs/stableswap/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
10-stableswap-on-solana/tests/: stableswap.spec.ts
12-solana-x402-demo/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
12-solana-x402-demo/app/: layout.tsx  page.tsx
12-solana-x402-demo/app/api/devine/: route.ts
12-solana-x402-demo/app/fortune/: page.tsx
12-solana-x402-demo/app/pay-fortune/: page.tsx
12-solana-x402-demo/components/: cats-component.tsx
13-solana-rwa-labubu/: .gitignore  README.md  eslint.config.mjs  labubu-metadata.json  package-lock.json  package.json
13-solana-rwa-labubu/anchor/: Anchor.toml  package-lock.json  package.json
13-solana-rwa-labubu/anchor/programs/vault/: Cargo.toml
13-solana-rwa-labubu/anchor/programs/vault/src/: lib.rs  tests.rs
13-solana-rwa-labubu/anchor/tests/: initialize.ts
13-solana-rwa-labubu/app/: page.tsx
13-solana-rwa-labubu/app/components/: labubu-card.tsx
4-helloworld-dapp/: README.md  package.json
4-helloworld-dapp/anchor/: Anchor.toml  README.md
4-helloworld-dapp/app/: page.tsx
4-helloworld-dapp/app/components/: vault-card.tsx
4_helloworld_dapp/: .gitignore  .prettierignore  codama.json  package-lock.json
4_helloworld_dapp/anchor/programs/vault/: Cargo.toml
5-ai-best-practice/: README.md
(+2 files in other folders)
