[package]
name = "stableswap"
version = "0.1.0"
description = "StableSwap AMM for stablecoin pairs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stableswap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0-rc.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0-rc.2", features = ["token", "associated_token"] }

# Pin base64ct to avoid edition2024 requirement
base64ct = ">=1.0.0, <1.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
